Persist per-character local loot history